Add Login Screen
Added Login Screen

--- a/ShopWrights/Views/Home/Index.cshtml
+++ b/ShopWrights/Views/Home/Index.cshtml
@@ -3,4 +3,31 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Enter into your Profile</h2>
+<!DOCTYPE html>
+
+<div id="loginpad" style="float:right;">
+    <table>
+        <tr>
+            <td><label>Login Id:</label></td>
+            <td>
+                <input type="text" />
+            </td>
+        </tr>
+        <tr>
+            <td><label>Password</label></td>
+            <td><input type="password"/></td>
+        </tr>
+        
+    </table>
+    <table>
+        <tr>
+            <td style="width:71px"></td>
+            <td>
+                <button style="width:95px; height:35px"  >SignIn</button>
+            </td>
+            <td> <button id="bsignup" style="width:95px; height:35px" >SignUp</button></td>
+        </tr>
+    </table>
+</div>
+<div style="color:#808080; height:450px"></div>
