--- a/ShopWrights/Content/Site.css
+++ b/ShopWrights/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿html {
-    background-color: #e2e2e2;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
 }
@@ -28,7 +28,7 @@ a {
     }
 
     a:hover {
-        background-color: #c7d1d6;
+        background-color: #ffffff;  
     }
 
 header, footer, hgroup,
@@ -99,20 +99,12 @@ h5, h6 {
 }
 
 #body {
-    background-color: #efeeef;
+    background-color: #ff3030;
     clear: both;
     padding-bottom: 35px;
 }
 
-    .main-content {
-        background: url("../Images/accent.png") no-repeat;
-        padding-left: 10px;
-        padding-top: 30px;
-    }
 
-    .featured + .main-content {
-        background: url("../Images/heroAccent.png") no-repeat;
-    }
 
 header .content-wrapper {
     padding-top: 20px; 
@@ -120,9 +112,9 @@ header .content-wrapper {
 
 footer {
     clear: both;
-    background-color: #e2e2e2;
+    background-color: #ffffff;
     font-size: .8em;
-    height: 100px;
+    height: 37px;
 }
 
 
@@ -425,13 +417,13 @@ label.checkbox {
 }
 
 input, textarea {
-    border: 1px solid #e2e2e2;
+    border: 1px solid #ffffff;
     background: #fff;
     color: #333;
     font-size: 1.2em;
     margin: 5px 0 6px 0;
     padding: 5px;
-    width: 300px;
+    width: 210px;
 }
 
 textarea {
@@ -452,8 +444,8 @@ textarea {
     input[type="submit"],
     input[type="button"],
     button {
-        background-color: #d3dce0;
-        border: 1px solid #787878;
+        background-color: #ffffff;
+        border: 2px solid #000000;
         cursor: pointer;
         font-size: 1.2em;
         font-weight: 600;
@@ -746,7 +738,7 @@ tr.pager td {
 
     footer {
         text-align: center;
-        height: auto;
+        height: 5px;
         padding: 10px 0;
     }
 
